<resources>
  <string name="app_name">Hike Through</string>
  <string name="title_game">Game</string>
  <string name="title_walkconverter">Walk Converter</string>
  <string name="title_inventory">Inventory</string>
  <string name="title_maps">Maps</string>


  <string name="game_button">Game</string>
  <string name="convert_walk_button">Convert Walk Button</string>
  <string name="inventory_button">Inventory Button</string>
  <string name="maps_button">Maps Button</string>
  <string name="start_game_button">Start Game</string>
  <string name="reset_game_button">Reset</string>
  <string name="undo_move_button">Undo 1 Move</string>
  <string name="save_map_button">Save Map</string>
  <string name="share_map_button">Share Map</string>

  <string name="hike_coin_text">Hike Coin </string>
  <string name="hike_coin">50</string>
  <string name="move_count_text">Move Count </string>
  <string name="move_count">20</string>

  <string name="start_button_clicked">Game Started!</string>
  <string name="reset_button_clicked">Game Reset</string>
  <string name="undo_button_clicked">1 Move Undone</string>
  <string name="save_map_button_clicked">Map Saved!</string>
  <string name="convert_walk_button_clicked">Walk Converted!</string>
  <string name="share_map_button_clicked">Map Shared</string>



</resources>
