<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="edu.cnm.deepdive.irt.hikethrough.fragments.GameFragment">

  <android.support.constraint.ConstraintLayout
    android:id="@+id/textBlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >
    <TextView
      android:id="@+id/hikeCoin"
      android:text="@string/hike_coin_text"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/hikeCoinCount"/>
    <TextView
      android:id="@+id/hikeCoinCount"
      android:text="@string/hike_coin"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/hikeCoin"
      app:layout_constraintRight_toLeftOf="@+id/moveCount"
      />
    <TextView
      android:text="@string/move_count_text"
      android:id="@+id/moveCount"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/hikeCoinCount"
      app:layout_constraintRight_toLeftOf="@+id/moveCountCurrent"
      />
    <TextView
      android:text="@string/move_count"
      android:id="@+id/moveCountCurrent"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/moveCount"
      app:layout_constraintRight_toRightOf="parent"
      />

  </android.support.constraint.ConstraintLayout>


  <edu.cnm.deepdive.irt.hikethrough.views.GameView
    android:id="@+id/gameView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    />

  <android.support.constraint.ConstraintLayout
    android:id="@+id/buttonBlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    >
    <Button
      android:text="@string/start_game_button"
      android:id="@+id/startButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/resetButton"/>
    <Button
      android:text="@string/reset_game_button"
      android:id="@+id/resetButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/startButton"
      app:layout_constraintRight_toLeftOf="@+id/undoMoveButton"
      />
    <Button
      android:text="@string/undo_move_button"
      android:id="@+id/undoMoveButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/resetButton"
      app:layout_constraintRight_toLeftOf="@+id/saveMapButton"
      />
    <Button
      android:text="@string/save_map_button"
      android:id="@+id/saveMapButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/undoMoveButton"
      app:layout_constraintRight_toLeftOf="parent"
      />
  </android.support.constraint.ConstraintLayout>
</LinearLayout>
